Fix NextImage on mobile, Changes mobile menu

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,90 +1,72 @@
-.cardImage {
-    padding: 15px;
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .card {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    flex-wrap: wrap;
-    overflow: hidden;
-    background: var(--light-color);
-    background: var(--light-color);
-    transition: .2s ease-in-out;
-    cursor: pointer;
-  }
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  flex-wrap: wrap;
+  overflow: hidden;
+  background: var(--light-color);
+  background: var(--light-color);
+  transition: .2s ease-in-out;
+  cursor: pointer;
+}
 
-  .card:hover {
-    box-shadow: 0px 1px 27px -3px rgba(0, 0, 0, 0.333);
-  }
+.cardHeader {
+  width: 100%;
+  padding: 15px;
+}
 
-  
-  .cardBody {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-  }
-  
-  
-  .tag {
-    align-self: flex-start;
-    padding: .25em .75em;
-    border-radius: 1em;
-    font-size: .75rem;
-  }
-  
-  .tag + .tag {
-    margin-left: .5em;
-  }
-  
-  .tagBlue {
-    background: #56CCF2;
-  background: linear-gradient(to bottom, #2F80ED, #56CCF2);
-    color: #fafafa;
-  }
-  
-  .cardBody h4 {
-    font-size: 1.5rem;
-    text-transform: capitalize;
-  }
-  
-  .cardFooter {
-    display: flex;
-    padding: 1rem;
-    margin-top: auto;
-  }
-  
-  .user {
-    display: flex;
-    gap: .5rem;
-  }
-  
-  .userImage {
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-  }
-  
-  .userInfo > small {
-    color: #666;
-  }
+
+.card:hover {
+  box-shadow: 0px 1px 27px -3px rgba(0, 0, 0, 0.333);
+}
+
+
+.cardBody {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.cardBody h4 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+.cardFooter {
+  display: flex;
+  padding: 1rem;
+  margin-top: auto;
+}
+
+.user {
+  display: flex;
+  gap: .5rem;
+}
+
+.userAvatar {
+  display: grid;
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-right: 5px;
+}
+
+
+.userInfo > small {
+  color: #666;
+}
 
 @media (max-width: 920px) {
-    .cardImage {
-      max-height: 420px;
-    }
+  .cardImage {
+    max-height: 420px;
+  }
 
 }
 
   
 @media (max-width: 500px) {
-  /* .card {
-    width: 80%;
-  } */
-
   .cardBody h4 {
     font-size: 22px;
   }
