--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -17,8 +17,8 @@
 .stickyHeader {
     background: rgba(0, 0, 0, 0.6);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8.6px);
+    -webkit-backdrop-filter: blur(8.6px);
     transition: .2s ease
 }
 
@@ -127,7 +127,7 @@
 
 .menuClose {
     position: absolute;
-    right: 25px;
+    right: 50px;
     top: 25px;
 }
 
@@ -138,19 +138,19 @@
     position: fixed;
     justify-content: center;
     top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgba(0, 0, 0, .95);
     place-items: center;
-    transition: .3s ease-in-out;
-}
-
-.mobileNavHide {
-    left: -100%;
+    transition: .2s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .mobileNavShow {
-    left: 0;
+    opacity: 1;
+    visibility: visible;
 }
 
 .mobileNav ul {
@@ -210,7 +210,7 @@
     }
 
     .icon {
-        font-size: 20px;
+        font-size: 28px;
     }
 
     .header {
